--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2011-12-28  Andrea  <abedini@ms.unimelb.edu.au>
+
+	Version 1.2
+
+	* include/tree_decomposition/tree_decomposition.hpp: Fix stupid
+	bug causing edge indexes collision
+
+	* tests: Add new test cases
+
 2011-12-23  Andrea  <abedini@ms.unimelb.edu.au>
 
 	Version 1.1
