--- a/README
+++ b/README
@@ -16,7 +16,7 @@ using the algorithm described in:
   graphs, with applications to planar graph colourings. J. Phys. A:
   Math. Theor. 43, 385001 (2010).
 
-** IF YOU USE THIS SOFTWARE FOR RESEACH PLEASE CITE THE ABOVE PAPER **
+** IF YOU USE THIS SOFTWARE FOR RESEARCH PLEASE CITE THE ABOVE PAPER **
 
 * Requirements
 
